--- a/doc/cacgd.tex
+++ b/doc/cacgd.tex
@@ -40,13 +40,13 @@ bookmarksopenlevel=2}
  \begin{center}
  \begin{figure}[htbp]
     \centering
-     \includegraphics[width=0.75\textwidth]{pic/fhkiel.png} 
+     \includegraphics[width=0.75\textwidth]{fhkiel.png} 
 \end{figure}
 
   \vspace*{2.5cm}
  {\bf \huge CACGD 2011 Practical Exercise Report}
  \vspace*{1cm} \\
- {\Large Master's Thesis\\}
+ {\Large Game Development\\}
  \vspace{0.5cm}
  {\Large \bfseries Bartholomäus Dedersen\\}
  \vfill
@@ -55,7 +55,7 @@ bookmarksopenlevel=2}
     \centering
     \begin{tabular}{l l}
         Date of Excursion: & Summer 2011 \\ 
-        Place: & Iraklion, Krete, Greece \\ 
+        Place: & Iraklion, Crete, Greece \\ 
         Course: & Information Technology \\
         %Date: & 3.1.2013\\
         Date: & \today\\
@@ -68,7 +68,7 @@ bookmarksopenlevel=2}
 
 \begin{abstract}
 
-    In this report about the practical part of the ``Computational Aspects of Computer Games Development'' programme for two weeks in Krete a
+    In this report about the practical part of the ``Computational Aspects of Computer Games Development'' programme for two weeks in Crete a
     game programming with the Python programming language is described. The controller is a neural interface for brainwave wavelength reception 
     through three skin-applied electrodes. The game is themed after a fictional Cretan Zombie incursion after the actual event.
 
@@ -79,21 +79,72 @@ bookmarksopenlevel=2}
 
 \chapter{Introduction}
 \label{chap:intro}
+\gdir{Μετα δέ την του βίου τελευτην ου  μετα ληθης ατιμοι κεῖνται, αλλα μετα μνημης τον αει ξρονον ὑμνοũνται.}\\
+-- Xenophon
+\vspace{15mm}
+
+This written documentation is a part of the two week conference and tutored exercises in the Cretan state capital Iraklion. The host was the
+Technical Educational Institute of Crete, a university with emphasis on applied technology. The conference preparation was done especially through the 
+department of Computer Sciences, visible through the timetable.\footnote{Available at \url{https://cacgd2011.teicrete.gr/?q=content/program-lectures}.}.
+
+The author of this work was part of the team from the German Fachhochschule Kiel and reported his personal experience in an formerly online available
+diary. This report is supposed to contain the technical description of the proceeding practical lessen from the excursion. Worthwhile to mention 
+members of the other college teams were not bound for such task as it functions as an addition to the regular curriculum of the event.
+Skills learned should be applied in the resulting game or educational entertainment tool.
+
+Other members of the authors team presented their own results, i.e. a location-based game and a helicopter simulation for children on a mobile platform.
+
+The task was done without the acquired technique of proper software engineering. Instead, a more spontaneous and agile development process was
+chosen due to the small team size and new field of work.
+
+The author wants to express his gratitude for having the option to experience Greece and learn new ways of thinking. 
+
 
 \chapter{CACGD Programme}
 \label{chap:cacgd}
 
+international programme(czech, canadian, british, greek and german college)
+mostly bachelors
+
+since ???
+collaboration programme
+every year different country
+
+topics-> see timetable
+
++excursion to ruins of krete/minotaurus/phaistos disk
+
 \chapter{Game Idea}
 \label{chap:idea}
+
+background story:
+zombie attack on crete
+Graveyard inspired by Rethymno
+phaistos disk is the source of zombiism
+
+zombies and easy understandable games on rise
+other similar games
+
 
 \chapter{Framework}
 \label{chap:framework}
 
+pygame
+neuronal network
+pyserial
+
 \chapter{Implementation}
 \label{chap:impl}
 
+code
+
+demo
+
 \chapter{Evaluation}
 \label{chap:eva}
+
+calibration time
+learning algorithms
 
 \chapter{Summary}
 \label{chap:sum}
