--- a/doc/common.bib
+++ b/doc/common.bib
@@ -14,4 +14,11 @@
     title = {Bitcoin: A peer-to-peer electronic cash system,” http://bitcoin.org/bitcoin.pdf},
     year = {}
 }
-
+@TechReport{Chong,
+  Author         = {Chee-Yee Chong and Srikanta P. Kumar},
+  Title          = {Sensor Networks: Evolution, Opportunities, and
+                   Challenges},
+  Note           = {\url{http://www.ics.uci.edu/~dsm/ics280sensor/readings/intro/chong.pdf}},
+  publisher      = {University of California, Irvine},
+  year           = 2003
+}
